# enum_traits

./: .appveyor.yml  .travis.yml  enum_traits.hpp  enumerator_traits.hpp  meson.build  readme.md  test_enum_traits.cpp  test_enumerator_traits.cpp
